--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.3",
     "country-state-city": "^3.2.1",
     "d3": "^7.8.5",
+    "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
